--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,4 +1,9 @@
 $corFundoPrincipal: #F5F5F5;
-$corFundoSecundaria: #F6D145;
+$corFundoSecundaria: #F4C013;
+
+$corNomeBoss: #00000011;
+
+$corTitulo: #3f3451;
+$corTexto: #2C2C2C;
 
 $corBotao: #3f3451;
