--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -3,4 +3,25 @@
 .about {
     background-color: variaveis.$corFundoSecundaria;
     
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px 0;
+        
+        &__image {
+            max-width: 55%;
+            width: 100%;
+            margin-left: 40px;
+            margin-right: 56px;
+        }
+
+        &__text {
+            margin-right: 56px;
+
+            .title {
+                margin-bottom: 16px;
+            }
+        }
+    }
 }
