adicionando music e footer

--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,5 +1,6 @@
 $corFundoPrincipal: #F5F5F5;
 $corFundoSecundaria: #F4C013;
+$corFundoTerciaria: #ADD8E6;
 
 $corNomeBoss: #00000011;
 
@@ -7,3 +8,4 @@ $corTitulo: #3f3451;
 $corTexto: #2C2C2C;
 
 $corBotao: #3f3451;
+$corBotaoHover: #544966;
