--- a/src/styles/_available.scss
+++ b/src/styles/_available.scss
@@ -7,7 +7,7 @@
         width: 100%;
         padding: 32px 0;
 
-        .title--small {
+        h4 {
             font-size: 1.2em;
             padding-bottom: 24px;
             margin-left: 32px;
