mudando cor de fundo do sobre

--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,5 +1,5 @@
 $corFundoPrincipal: #F5F5F5;
-$corFundoSecundaria: #F4C013;
+$corFundoSecundaria: #FEC203;
 $corFundoTerciaria: #ADD8E6;
 
 $corNomeBoss: #00000011;
