--- a/src/styles/_expansion.scss
+++ b/src/styles/_expansion.scss
@@ -8,26 +8,41 @@
         justify-content: space-between;
         align-items: center;
         padding: 40px 0;
+
+        @media (max-width: 768px) {
+            display: block;
+            text-align: center;       
+        }
         
         &__image {
             max-width: 55%;
             width: 100%;
             margin-right: 56px;
+
+            @media (max-width: 768px) {
+                margin: 0 0;      
+            }
         }
         
         &__text {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
             margin-left: 40px;
             margin-right: 56px;
+            text-align: right;
 
             .title {
+                
                 margin-bottom: 16px;
             }
 
             .text {
                 margin-bottom: 32px;
+            }
+
+            .button {
+                display: block;
+                width: 170px;
+                margin: 0 auto;
+                
             }
         }
     }
