--- a/src/styles/_music.scss
+++ b/src/styles/_music.scss
@@ -19,6 +19,11 @@
             padding-bottom: 32px;
         }
 
+        img {
+            max-width: 100%;
+            width: 750px;
+        }
+
         a {
             text-decoration: none;
             font-size: 28px;
