--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -14,7 +14,7 @@
         align-items: center;
 
         @media (max-width: 768px) {
-            display: block;
+            display: none;
         }
 
         .header__logo {
@@ -39,8 +39,55 @@
                     padding: 8px 16px;
                 }
             }
+        }
     }
 
-    
+    &__mobile {
+        display: none;
+
+        @media (max-width: 768px) {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        
+        &__links {
+            display: none;
+            text-align: center;
+            margin-top: 40px;
+            margin-left: 16px;
+            padding-bottom: 40px;
+
+            &--is-open {
+                display: block;
+            }
+
+            &__item {
+                
+                a {
+                    text-decoration: none;
+                }
+            }
+        }
+
+        .header__logo {
+            max-width: 108px;
+            margin-left: 0px;
+        }
+
+        &__toggle {
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+            margin-top: 4px;
+            margin-right: 16px;
+
+            &__bar {
+                background-color: black;
+                height: 3px;
+                width: 25px;
+                margin: 3px 0;
+            }
+        }
     }
 }
