--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -6,7 +6,8 @@
     top: 0;
     left: 0;
     background-color: variaveis.$corFundoPrincipal;
-    box-shadow: 0px 3px 7px 0px #0000000a;
+    box-shadow: 0px 3px 7px 0px #00000013;
+    padding: 8px 0;
 
     &__content {
         display: flex;
@@ -83,7 +84,7 @@
             margin-right: 16px;
 
             &__bar {
-                background-color: black;
+                background-color: variaveis.$corTitulo;
                 height: 3px;
                 width: 25px;
                 margin: 3px 0;
